pkg/conformance/testdata/tracebacks/syntax.txt
  File "/private/tmp/tbsamples/syn.py", line 1
    def f(:
          ^
SyntaxError: invalid syntax
